cabal-version:      2.4
name:               app
version:            0.1.0.0

executable app
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    other-modules: LargeNumbers, FizzBuzz

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, random, time
    hs-source-dirs:   app
    default-language: Haskell2010
